feat: Implement button style and text content updates

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Solana NFT Minter" />
   <link rel="manifest" href="/manifest.json" />
-  <title>Solana NFT Minter</title>
+  <title>FreeBonde NFT Minter</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
